# python-module-08

.env/: pyvenv.cfg
ex0/: construct.py
ex1/: loading.py  pyproject.toml  requirements.txt
ex2/: .env.example  oracle.py
